[package]
name = "netkraken"
version = "0.1.11"
edition = "2021"

[[bin]]
name = "nk"
path = "src/main.rs"

[dependencies]
# Errors
anyhow = "1.0.72"

# CLI
clap = { version = "4.3.19", features = ["derive"] }

# List IP addresses of all network interfaces
local-ip-address = "0.6.1"

# Async futures
futures = "0.3.28"

# Serialization/Deserialization
serde = "1.0.181"
serde_derive = "1.0.181"
serde_json = "1.0.104"

# Nice result output
tabled = "0.14.0"

# Asynchronous runtime
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
# Cancellation
tokio-util = "0.7.10"

# Configuration
toml = "0.8.12"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tracing-appender = "0.2.2"

# Recording time
time = "0.3.25"

# UUID generation
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
